# logism-lpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
assets/shaders/DebugCircle/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/DebugLine/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/DebugPolygon/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/Textured/: fragment_shader.frag  vertex_shader.vert  vertex_shader.vert.spv
include/: Camera.h  CircuitUnit.h  Connector.h  IOHelper.h  Line.h  Shader.h  ShaderBase.h  Sim.h  SwapChain.h  ThinDrawer.h  WindowHandler.h  definitions.h  vkInit.h
include/ShaderHeaders/: DebugCircle.h  DebugLine.h  DebugPolygon.h  VulkanTriangle.h
src/: BaseInit.cpp  Camera.cpp  CircuitUnit.cpp  Connector.cpp  IOHelper.cpp  Line.cpp  Shader.cpp  ShaderBase.cpp  Sim.cpp  SwapChain.cpp  ThinDrawer.cpp  Utilities.cpp  WindowHandler.cpp
src/ShaderSources/: DebugCircle.cpp  DebugLine.cpp  DebugPolygon.cpp  VulkanTriangle.cpp
